--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,38 +29,21 @@
       </nav>
     {%- endif -%}
   </div>
-  
-  <!-- SAGE stuff, taken from https://github.com/sheaves/sheaves.github.io/blob/master/_layouts/default.html -->
-    <script src="https://sagecell.sagemath.org/static/jquery.min.js"></script>
-    <script src="https://sagecell.sagemath.org/static/embedded_sagecell.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://sagecell.sagemath.org/static/sagecell_embed.css">
-    <!-- Cell definitions -->
-    <script>$(function () {
-    // Basic Sage cell. Use <div class = "sage">
-    sagecell.makeSagecell({inputLocation: '.sage'});
-    // Auto evaluate Sage. Use <div class="auto">
-    sagecell.makeSagecell({inputLocation: '.auto', autoeval: 'True'});
-    // No editor, auto evaluate Sage. Use <div class="auto_out">
-    sagecell.makeSagecell({inputLocation: '.auto_out', autoeval: 'True', hide: ["editor", "evalButton", "editorToggle"]}); 
-   // No evalButton. Use <div class="no_eval">
-    sagecell.makeSagecell({inputLocation: '.no_eval', hide: ["evalButton", "editorToggle"]});     
-   // No output. Use <div class="no_out">
-    sagecell.makeSagecell({inputLocation: '.no_out', hide: ["evalButton", "editorToggle","output"]});      
-    // Only the 'Go!' button; no input displayed. Use <div class="go">
-    sagecell.makeSagecell({inputLocation:  '.go', autoeval: 'True',
-                       template:       sagecell.templates.minimal,
-                       evalButtonText: 'Go!'});
-    // Linked Sage cell. Use <div class ="linked">
-    sagecell.makeSagecell({inputLocation: '.linked', linked: 'True'});
-    // Linked Sage cell with autoeval. Use <div class ="linked_auto">
-    sagecell.makeSagecell({inputLocation: '.linked_auto', linked: 'True', autoeval: 'True'});
-    // All languages. Use <div class = "all">
-    sagecell.makeSagecell({inputLocation: '.all', languages: sagecell.allLanguages});
-    // Linked Sage cell. No editor, auto evaluate Sage. Use <div class="linked_auto_out">
-    sagecell.makeSagecell({inputLocation: '.linked_auto_out', linked: 'True', autoeval: 'True', hide: ["editor", "evalButton", "editorToggle"]}); 
+
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      jax: ["input/TeX", "output/HTML-CSS"],
+      tex2jax: {
+        inlineMath: [ ['$', '$'], ["\\(", "\\)"] ],
+        displayMath: [ ['$$', '$$'], ["\\[", "\\]"] ],
+        processEscapes: true,
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+      }
+      //,
+      //displayAlign: "left",
+      //displayIndent: "2em"
     });
-    </script>
-    <!-- Basic Sage -->
-    <script>sagecell.makeSagecell({"inputLocation": ".sage"});</script>
+  </script>
+  <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML" type="text/javascript"></script>
 
 </header>
